# python-project-52

./: .gitignore  Makefile  README.md  Untitled  build.sh  pyproject.toml  sckrin_hexlet.md
.github/workflows/: my_workflow.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py
staticfiles/css/: main.css
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/static/css/: main.css
task_manager/templates/: _form.html  base.html  home.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_task_labels.py
users/: forms.py  tests.py  urls.py  views.py
users/fixtures/: users.json
